--- a/slr-renting/src/main/java/vista/Loginusuarioregistrado.fxml
+++ b/slr-renting/src/main/java/vista/Loginusuarioregistrado.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -19,22 +20,29 @@
         <Text fill="WHITE" layoutX="261.0" layoutY="114.0" text="Bienvenido" />
         <Text fill="#c4c4c2" layoutX="210.0" layoutY="138.0" text="Ingrese sus datos para acceder" />
         <Text fill="WHITE" layoutX="185.0" layoutY="179.0" text="Email" />
-        <Text fill="WHITE" layoutX="185.0" layoutY="233.0" text="Contraseña" />
+        <Text fill="WHITE" layoutX="185.0" layoutY="241.0" text="Contraseña" />
 
+        <!-- EMAIL -->
         <TextField fx:id="txtEmail" layoutX="185.0" layoutY="183.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00;" />
+        <Label fx:id="lblErrorEmail" layoutX="185.0" layoutY="212.0" prefHeight="18.0" prefWidth="222.0" style="-fx-font-size: 11px; -fx-padding: 2 0 0 0;" text="✗ El email no puede estar vacío" textFill="RED" visible="false" />
 
-        <Button layoutX="203.0" layoutY="304.0" mnemonicParsing="false" onAction="#onAcceder" prefHeight="32.0" prefWidth="186.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00; -fx-text-fill: black;" text="Acceder" wrapText="true" />
+        <!-- CONTRASEÑA -->
+        <PasswordField fx:id="txtPassword" layoutX="185.0" layoutY="247.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00;" />
+        <Label fx:id="lblErrorPassword" layoutX="185.0" layoutY="276.0" prefHeight="18.0" prefWidth="222.0" style="-fx-font-size: 11px; -fx-padding: 2 0 0 0;" text="✗ La contraseña no puede estar vacía" textFill="RED" visible="false" />
+
+        <!-- BOTÓN ACCEDER -->
+        <Button layoutX="203.0" layoutY="318.0" mnemonicParsing="false" onAction="#onAcceder" prefHeight="32.0" prefWidth="186.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00; -fx-text-fill: black;" text="Acceder" wrapText="true" />
 
         <Line endX="-104.91421508789062" endY="341.5141906738281" layoutX="266.0" layoutY="82.0" startX="161.5" startY="342.10003662109375" stroke="#fcdb00" />
 
+        <!-- BOTÓN REGISTRO -->
         <Button fx:id="btnRegistro" layoutX="206.0" layoutY="360.0" mnemonicParsing="false" onAction="#irARegistro" prefHeight="51.0" prefWidth="186.0" style="-fx-text-fill: white; -fx-background-color: black;" text="Si es su primera vez registrese aquí." textAlignment="CENTER" wrapText="true" />
 
+        <!-- LOGO -->
         <ImageView fitHeight="78.0" fitWidth="73.0" layoutX="170.0" layoutY="51.0" preserveRatio="true">
             <image>
                 <Image url="@logo.jpg" />
             </image>
         </ImageView>
-
-        <PasswordField fx:id="txtPassword" layoutX="185.0" layoutY="237.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: #fcdb00;" />
     </children>
 </AnchorPane>
