Cambios finales Fernando

--- a/slr-renting/src/main/java/vista/Adminchofer.fxml
+++ b/slr-renting/src/main/java/vista/Adminchofer.fxml
@@ -20,10 +20,7 @@
         </columns>
       </TableView>
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de Chofers"
-            wrappingWidth="634.6878051757812">
+      <Text fill="WHITE" layoutX="7.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Panel administración de Chofers" wrappingWidth="634.6878051757812">
          <font>
             <Font size="43.0" />
          </font>
