--- a/slr-renting/src/main/java/vista/Admincoche.fxml
+++ b/slr-renting/src/main/java/vista/Admincoche.fxml
@@ -8,17 +8,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-            prefHeight="451.0" prefWidth="648.0" 
-            style="-fx-background-color: black;" 
-            xmlns="http://javafx.com/javafx/24.0.1" 
-            xmlns:fx="http://javafx.com/fxml/1" 
-            fx:controller="controlador.AdminCocheControlador">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminCocheControlador">
 
    <children>
 
-      <TableView fx:id="tblCoche" layoutY="175.0" prefHeight="275.0" prefWidth="648.0"
-                 style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
+      <TableView fx:id="tblCoche" layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
         <columns>
           
           <TableColumn fx:id="clmBast" prefWidth="58.4000244140625" text="Nº Bastidor" />
@@ -34,10 +28,7 @@
         </columns>
       </TableView>
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de coches"
-            wrappingWidth="634.6878051757812">
+      <Text fill="WHITE" layoutX="7.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Panel administración de coches" wrappingWidth="634.6878051757812">
          <font>
             <Font size="43.0" />
          </font>
