--- a/slr-renting/src/main/java/vista/Añadirchofer.fxml
+++ b/slr-renting/src/main/java/vista/Añadirchofer.fxml
@@ -33,7 +33,7 @@
       <Text fill="WHITE" layoutX="185.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="73.38397216796875" />
       
 
-      <CheckBox fx:id="chkDisposicion" layoutX="185.0" layoutY="357.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: #2b2b2b; -fx-text-fill: white; -fx-border-color: fcdb00;" text="Disposicion" textFill="#2b2b2b">
+      <CheckBox fx:id="chkDisposicion" layoutX="185.0" layoutY="357.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: #2b2b2b; -fx-text-fill: white; -fx-border-color: fcdb00;" text="Disposición" textFill="#2b2b2b">
          <effect>
             <Lighting>
                <bumpInput>
@@ -52,8 +52,6 @@
             <Image url="@logo.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btnSalir" layoutX="307.0" layoutY="417.0" mnemonicParsing="false" onAction="#salir" prefHeight="32.0" prefWidth="99.0"
-        style="-fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black; -fx-background-radius: 16; -fx-border-radius: 16;"
-        text="Salir" wrapText="true" />
+      <Button fx:id="btnSalir" layoutX="307.0" layoutY="417.0" mnemonicParsing="false" onAction="#salir" prefHeight="32.0" prefWidth="99.0" style="-fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black; -fx-background-radius: 16; -fx-border-radius: 16;" text="Salir" wrapText="true" />
    </children>
 </AnchorPane>
