--- a/slr-renting/src/main/java/vista/Añadircoche.fxml
+++ b/slr-renting/src/main/java/vista/Añadircoche.fxml
@@ -18,7 +18,7 @@
       <Text fill="WHITE" layoutX="185.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº de Bastidor" />
       <Text fill="WHITE" layoutX="185.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Marca" wrappingWidth="73.38397216796875" />
       <Text fill="WHITE" layoutX="185.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modelo" />
-      <Text fill="WHITE" layoutX="185.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matricula" wrappingWidth="73.38397216796875" />
+      <Text fill="WHITE" layoutX="185.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matrícula" wrappingWidth="73.38397216796875" />
       
             <TextField fx:id="txtBastidor" layoutX="185.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
       <TextField fx:id="txtBastidor" layoutX="185.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
@@ -38,7 +38,7 @@
       <Line endX="-100.5" endY="341.5" layoutX="267.0" layoutY="240.0" startX="443.4000244140625" startY="341.5" stroke="#fcdb00" />
       
       
-      <Text fill="WHITE" layoutX="616.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descripcion" />
+      <Text fill="WHITE" layoutX="616.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descripción" />
       <TextField fx:id="txtDescripcion" layoutX="472.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
       <TextField fx:id="txtPlazas" layoutX="472.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
       <TextField fx:id="txtPotencia" layoutX="472.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
