--- a/slr-renting/src/main/java/vista/PanelFacturaUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelFacturaUser.fxml
@@ -13,7 +13,6 @@
 
 <BorderPane prefHeight="520" prefWidth="720" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.PanelFacturaUserControlador">
 
-      <top>
     <top>
         <HBox alignment="CENTER_LEFT" spacing="12" style="-fx-background-color: black;">
             <padding>
@@ -28,20 +27,17 @@
         </HBox>
     </top>
 
-  
     <center>
         <VBox spacing="18" style="-fx-background-color: black;">
             <padding>
                 <Insets bottom="18" left="18" right="18" top="18" />
             </padding>
 
-  <VBox spacing="8" style="-fx-background-color: #121212; -fx-background-radius: 12; -fx-padding: 14; -fx-border-color: #3b3320; -fx-border-radius: 12;">
+            <!-- Datos del vehículo -->
             <VBox spacing="8" style="-fx-background-color: #121212; -fx-background-radius: 12; -fx-padding: 14; -fx-border-color: #3b3320; -fx-border-radius: 12;">
                 <Label style="-fx-text-fill: #ffd666; -fx-font-size: 14px; -fx-font-weight: bold;" text="Datos del vehículo" />
 
                 <GridPane hgap="12" vgap="8">
-                    
-
                     <Label style="-fx-text-fill: #b5b5b5;" text="Marca y Modelo:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <Label fx:id="lblMarcaModelo" style="-fx-text-fill: #f5f5f5; -fx-font-weight: bold;" text="-" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
@@ -50,19 +46,20 @@
 
                     <Label style="-fx-text-fill: #b5b5b5;" text="Matrícula:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                     <Label fx:id="lblMatricula" style="-fx-text-fill: #f5f5f5; -fx-font-weight: bold;" text="-" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-               <columnConstraints>
-                  <ColumnConstraints />
-                  <ColumnConstraints />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-               </rowConstraints>
+                    
+                    <columnConstraints>
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                    </rowConstraints>
                 </GridPane>
             </VBox>
 
-              <VBox spacing="8" style="-fx-background-color: #121212; -fx-background-radius: 12; -fx-padding: 14; -fx-border-color: #3b3320; -fx-border-radius: 12;">
+            <!-- Desglose del precio -->
             <VBox spacing="8" style="-fx-background-color: #121212; -fx-background-radius: 12; -fx-padding: 14; -fx-border-color: #3b3320; -fx-border-radius: 12;">
                 <Label style="-fx-text-fill: #ffd666; -fx-font-size: 14px; -fx-font-weight: bold;" text="Desglose del precio" />
 
@@ -84,38 +81,33 @@
 
                     <Label style="-fx-text-fill: #ffd666; -fx-font-size: 16px; -fx-font-weight: bold;" text="Total a pagar:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
                     <Label fx:id="lblTotal" style="-fx-text-fill: #ffd666; -fx-font-size: 16px; -fx-font-weight: bold;" text="0€" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-               <columnConstraints>
-                  <ColumnConstraints />
-                  <ColumnConstraints />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-               </rowConstraints>
+                    
+                    <columnConstraints>
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                    </rowConstraints>
                 </GridPane>
             </VBox>
-
         </VBox>
     </center>
 
-      <bottom>
     <bottom>
-    <VBox alignment="CENTER" spacing="6" style="-fx-padding: 12 16 12 16;">
-        
-        <HBox alignment="CENTER_RIGHT" spacing="12">
-            <Button fx:id="btnConfirmar" style="-fx-background-radius: 18; -fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-weight: bold; -fx-padding: 8 14 8 14;" text="Confirmar reserva" />
+        <VBox alignment="CENTER" spacing="6" style="-fx-padding: 12 16 12 16;">
+            <HBox alignment="CENTER_RIGHT" spacing="12">
+                <Button fx:id="btnConfirmar" style="-fx-background-radius: 18; -fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-weight: bold; -fx-padding: 8 14 8 14;" text="Confirmar reserva" />
 
-            <Button fx:id="btnCerrar" style="-fx-background-radius: 18; -fx-background-color: transparent; -fx-border-color: #3b3320; -fx-text-fill: #f5f5f5; -fx-padding: 8 14 8 14;" text="Cerrar" />
-        </HBox>
+                <Button fx:id="btnCerrar" style="-fx-background-radius: 18; -fx-background-color: transparent; -fx-border-color: #3b3320; -fx-text-fill: #f5f5f5; -fx-padding: 8 14 8 14;" text="Cerrar" />
+            </HBox>
 
-    
-        <Label fx:id="lblMensaje" style="-fx-text-fill: #a7ffa7; -fx-font-size: 14px; -fx-font-weight: bold;" text="" visible="false" />
-    </VBox>
-</bottom>
-
-
+            <Label fx:id="lblMensaje" style="-fx-text-fill: #a7ffa7; -fx-font-size: 14px; -fx-font-weight: bold;" text="" visible="false" />
+        </VBox>
+    </bottom>
 </BorderPane>
