--- a/slr-renting/src/main/java/vista/PanelMainUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelMainUser.fxml
@@ -37,7 +37,7 @@
     
             <MenuButton fx:id="menuUsuario" style="-fx-background-radius: 20; -fx-background-color: transparent; -fx-border-radius: 20; -fx-border-color: #ffd666; -fx-border-width: 1.5; -fx-text-fill: #ffd666; -fx-font-size: 13px; -fx-padding: 8 18 8 18;" text="Usuario">
                 <items>
-                    <MenuItem fx:id="itemConfig" text="Config" />
+                    <MenuItem fx:id="itemConfig" text="Configuración" />
                     <MenuItem fx:id="itemMisReservas" onAction="#abrirMisReservas" text="Mis Reservas" />
                     <MenuItem fx:id="itemLogout" onAction="#cerrarSesion" text="Logout" />
                 </items>
@@ -93,8 +93,8 @@
                                         <Insets bottom="12" left="16" right="16" top="12" />
                                     </padding>
                                     <VBox spacing="6">
-                                        <Label style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;" text="0-100 km/h" />
-                                        <Label fx:id="lblAceleracionDestacado" style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;" text="0.0 s" />
+                                        <Label style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;" text="Plazas" />
+                                        <Label fx:id="lblAceleracionDestacado" style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;" text="0" />
                                     </VBox>
                                 </StackPane>
 
@@ -115,7 +115,7 @@
                                         <Insets bottom="12" left="16" right="16" top="12" />
                                     </padding>
                                     <VBox spacing="6">
-                                        <Label style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;" text="Transmisión" />
+                                        <Label style="-fx-text-fill: #b5b5b5; -fx-font-size: 11px;" text="Motor" />
                                         <Label fx:id="lblTransmisionDestacado" style="-fx-text-fill: #f5f5f5; -fx-font-size: 16px; -fx-font-weight: bold;" text="Desconocido" />
                                     </VBox>
                                 </StackPane>
@@ -141,8 +141,6 @@
                     </HBox>
 
                     
-                    <Label style="-fx-text-fill: #ffd666; -fx-font-size: 20px; -fx-font-weight: bold;" text="Colección" />
-
                     
                     <Label style="-fx-text-fill: #ffd666; -fx-font-size: 20px; -fx-font-weight: bold;" text="Colección" />
 
